fixed small alignment issue in the navbar

--- a/src/scss/components/Navbar.scss
+++ b/src/scss/components/Navbar.scss
@@ -5,6 +5,16 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 2em 5vw;
+
+  .logo {
+    a {
+      display: block;
+    }
+    img {
+      display: block;
+    }
+  }
 
   @include tab-port {
     font-family: "Ubuntu", sans-serif;
